Dropdown: Add `container` option

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1115,6 +1115,42 @@ $(window).ready(function() {
 
             <div class="mb-1">
                 <div class="dropdown">
+                  <a href="#" role="button" class="dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-container="body">
+                    Dropdown w/ container
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-text">Non-interactive text</li>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                  </ul>
+                </div>
+            </div>
+            <div class="mb-1">
+                <div class="dropdown dropup dropdown-menu-reverse">
+                  <a href="#" role="button" class="dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-container="body">
+                    Reverse dropup w/ container
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-text">Non-interactive text</li>
+                    <li><a href="#">Action</a></li>
+                    <li>
+                        <a href="#">Something else here</a>
+                        <ul>
+                            <li><a href="#0-2-2-0">Action</a></li>
+                            <li><a href="#0-2-2-1">Another action</a></li>
+                            <li><a href="#0-2-2-2">Something else here</a></li>
+                            <li class="dropdown-divider"></li>
+                            <li><a href="#0-2-2-3">Separated link</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Another action</a></li>
+                  </ul>
+                </div>
+            </div>
+
+            <div class="mb-1">
+                <div class="dropdown">
                   <a href="#" role="button" class="dropdown-toggle" data-cfw="dropdown">
                     Dropdown
                   </a>
