Card: Fix header and footer border radius for card group

--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -139,6 +139,38 @@ Holder.addTheme("gray", {
       </div>
     </div>
 
+    <h2>Card Group w/ Equalize</h2>
+
+    <div class="card-group-sm" data-cfw="equalize" data-cfw-equalize-target=".card-body">
+      <div class="card">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <div class="card-footer">Footer</div>
+      </div>
+      <div class="card">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <div class="card-footer">Footer</div>
+      </div>
+      <div class="card">
+        <div class="card-header">Header</div>
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+        <div class="card-footer">Footer</div>
+      </div>
+    </div>
+
     <h3>Card Group - Single card</h3>
 
     <div class="card-group-sm">
