--- a/content/buttons/index.html
+++ b/content/buttons/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -341,7 +343,7 @@
 <p>Please refer to the <a href="/get-started/accessibility/#conveying-meaning-with-color">Accessiblity notes about conveying meaning with color</a>.</p>
 </div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <!-- Base button style -->
 <button type="button" class="btn">Default</button>
 
@@ -396,7 +398,7 @@
 
 <p>When using button classes on <code class="highlighter-rouge">&lt;a&gt;</code> elements that are used to trigger in-page functionality (like collapsing content), rather than linking to new pages or sections within the current page, these links should be given a <code class="highlighter-rouge">role="button"</code> to appropriately convey their purpose to assistive technologies such as screen readers.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <a class="btn btn-primary" href="#" role="button">Link</a>
 <button class="btn btn-primary" type="submit">Button</button>
 <input class="btn btn-primary" type="button" value="Input" />
@@ -413,7 +415,7 @@
 
 <p>In need of a button, but not the hefty background colors they bring? Replace the default modifier classes with the <code class="highlighter-rouge">.btn-outline-*</code> ones to remove all background images and colors on any button.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <button type="button" class="btn btn-outline-primary">Primary</button>
 <button type="button" class="btn btn-outline-secondary">Secondary</button>
 <button type="button" class="btn btn-outline-success">Success</button>
@@ -432,7 +434,7 @@
 
 <p>Fancy larger or smaller buttons? Add <code class="highlighter-rouge">.btn-xs</code>, <code class="highlighter-rouge">.btn-sm</code>, <code class="highlighter-rouge">.btn-lg</code>, or <code class="highlighter-rouge">.btn-xl</code> for additional sizes.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <p>
   <button type="button" class="btn btn-primary btn-xl">Extra Large button</button>
   <button type="button" class="btn btn-xl">Extra Large button</button>
@@ -477,7 +479,7 @@
 
 <p>Create block level buttons—those that span the full width of a parent—by adding <code class="highlighter-rouge">.btn-block</code>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <button type="button" class="btn btn-primary btn-lg btn-block">Large Block level button</button>
 <button type="button" class="btn btn-success btn-sm btn-block">Small Block level button</button>
 </div>
@@ -488,7 +490,7 @@
 
 <p>Buttons will appear pressed (with a darker background, darker border, and inset shadow) when active. <strong>There’s no need to add a class to <code class="highlighter-rouge">&lt;button&gt;</code>s as they use a pseudo-class</strong>. However, you can still force the same active appearance with <code class="highlighter-rouge">.active</code> (and include the <code>aria-pressed="true"</code> attribute) should you need to replicate the state programmatically.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Standard Buttons:</strong>
 <p>
 <button type="button" class="btn active">Default</button>
@@ -537,7 +539,7 @@
 
 <p>Make buttons look inactive by adding the <code class="highlighter-rouge">disabled</code> boolean attribute to any <code class="highlighter-rouge">&lt;button&gt;</code> element.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Standard Buttons:</strong>
 <p>
 <button type="button" class="btn" disabled="">Default</button>
@@ -590,7 +592,7 @@
 <p>Please refer to the <a href="/get-started/accessibility/#disabled-anchors">Accessiblity notes about disabled anchors</a>.</p>
 </div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Anchor Standard Buttons:</strong>
 <p>
 <a href="#" role="button" class="btn disabled" aria-disabled="true">Default</a>
@@ -647,7 +649,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -656,7 +658,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -672,7 +674,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -682,7 +684,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
