--- a/get-started/build-tools/index.html
+++ b/get-started/build-tools/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -295,7 +297,7 @@
                 </h1>
 
                 
-<p>Figuration uses <a href="http://gruntjs.com">Grunt</a> for its CSS and JavaScript build system and Jekyll for the written documentation. Our Gruntfile includes convenient methods for working with the framework, including compiling code, running tests, and more.</p>
+<p>Figuration uses <a href="https://gruntjs.com/">Grunt</a> for its CSS and JavaScript build system and Jekyll for the written documentation. Our Gruntfile includes convenient methods for working with the framework, including compiling code, running tests, and more.</p>
 
 <h2 class="no_toc" id="contents">Contents</h2>
 
@@ -311,15 +313,15 @@
 
 <h2 id="tooling-setup">Tooling Setup</h2>
 
-<p>To use our Gruntfile and run our documentation locally, you’ll need a copy of Figuration’s source files, Node, and Grunt. Follow these steps and you should be ready to rock:</p>
+<p>To use our Gruntfile and run our documentation locally, you’ll need a copy of Figuration’s source files, Node.js, and Grunt. Follow these steps and you should be ready to rock:</p>
 
 <ol>
-  <li><a href="https://nodejs.org/download">Download and install Node</a>, which we use to manage our dependencies.</li>
+  <li><a href="https://nodejs.org/download">Download and install Node.js</a>, which we use to manage our dependencies.</li>
   <li>Install the Grunt command line tools, <code class="highlighter-rouge">grunt-cli</code>, with <code class="highlighter-rouge">npm install -g grunt-cli</code>.</li>
   <li>Navigate to the root <code class="highlighter-rouge">/figuration</code> directory and run <code class="highlighter-rouge">npm install</code> to install our local dependencies listed in <a href="https://github.com/cast-org/figuration/blob/master/package.json">package.json</a>.</li>
   <li><a href="https://www.ruby-lang.org/en/documentation/installation/">Install Ruby</a>, install <a href="http://bundler.io/">Bundler</a> with <code class="highlighter-rouge">gem install bundler</code>, and finally run <code class="highlighter-rouge">bundle install</code>. This will install all Ruby dependencies, such as Jekyll and plugins.
     <ul>
-      <li><strong>Windows users:</strong> Read <a href="http://jekyll-windows.juthilo.com/">this unofficial guide</a> to get Jekyll up and running without problems.</li>
+      <li><strong>Windows users:</strong> Read <a href="https://jekyllrb.com/docs/windows/">this guide</a> to get Jekyll up and running without problems.</li>
     </ul>
   </li>
 </ol>
@@ -348,7 +350,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">grunt test</code></td>
-      <td>Runs <a href="https://github.com/brigade/scss-lint">scss-lint</a>, <a href="http://jshint.com/">JSHint</a> and <a href="http://qunitjs.com/">QUnit</a> tests headlessly in <a href="http://phantomjs.org/">PhantomJS</a>.</td>
+      <td>Runs <a href="https://stylelint.io/">stylelint</a>, <a href="http://jshint.com/">JSHint</a> and <a href="http://qunitjs.com/">QUnit</a> tests headlessly in <a href="http://phantomjs.org/">PhantomJS</a>.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">grunt docs</code></td>
@@ -382,7 +384,7 @@
 <ol>
   <li>Run through the <a href="#tooling-setup">tooling setup</a> above to install Jekyll (the site builder) and other Ruby dependencies with <code class="highlighter-rouge">bundle install</code>.</li>
   <li>From the root <code class="highlighter-rouge">/figuration</code> directory, run <code class="highlighter-rouge">bundle exec jekyll serve</code> in the command line.</li>
-  <li>Open <a href="http://localhost:9001">http://localhost:9001</a> in your browser, and enjoy.</li>
+  <li>Open <code class="highlighter-rouge">http://localhost:9001</code> in your browser, and enjoy.</li>
 </ol>
 
 <p>Learn more about using Jekyll by reading its <a href="http://jekyllrb.com/docs/home/">documentation</a>.</p>
@@ -402,7 +404,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -411,7 +413,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -427,7 +429,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -437,7 +439,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
