--- a/widgets/collapse/index.html
+++ b/widgets/collapse/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -467,7 +469,7 @@
 
 <h3 id="basic">Basic</h3>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <button type="button" class="btn btn-outline-primary" data-cfw="collapse" data-cfw-collapse-target="#collapseEx1">Collapse <span class="caret"></span></button>
 <div id="collapseEx1" class="collapse">
     <p>Fusce vel posuere nulla. Cras urna enim, tristique a diam quis, suscipit euismod ante. Praesent fringilla tincidunt augue facilisis condimentum. Nam eget congue nisl. Sed hendrerit, arcu convallis gravida scelerisque, purus lectus scelerisque enim, nec gravida sapien diam eget sem.</p>
@@ -482,7 +484,7 @@
 
 <p>You can assign multiple triggers to control one collapse target. It is required to use either the <code class="highlighter-rouge">data-cfw-collapse-target</code> or <code class="highlighter-rouge">href</code> attributes in order for all the control triggers, and target states to become synchronised.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <a href="#" role="button" class="btn btn-outline-primary" data-cfw="collapse" data-cfw-collapse-target="#multi-collapse">Trigger 1 <span class="caret"></span></a>
 <button type="button" class="btn btn-outline-primary" data-cfw="collapse" data-cfw-collapse-target="#multi-collapse">Trigger 2 <span class="caret"></span></button>
 <div id="multi-collapse">
@@ -497,7 +499,7 @@
 
 <p>Using <code class="highlighter-rouge">id</code> and matching <code class="highlighter-rouge">href</code> attributes.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <a href="#href-collapse" role="button" class="btn btn-outline-primary" data-cfw="collapse">ID Trigger 1 <span class="caret"></span></a>
 <a href="#href-collapse" role="button" class="btn btn-outline-primary" data-cfw="collapse">ID Trigger 2 <span class="caret"></span></a>
 <div id="href-collapse" class="collapse">
@@ -514,7 +516,7 @@
 
 <p>A horizontal variant of a collapse can be invoked by placing a class of <code class="highlighter-rouge">width</code> on the collapse target, or by using the data attribute <code class="highlighter-rouge">data-cfw-collapse-horizontal="true"</code> on the trigger.  A child container with a fixed dimension width (not a percentage) is needed for proper animation.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <button type="button" class="btn btn-outline-primary" data-cfw="collapse" data-cfw-collapse-target="#collapseEx2" data-cfw-collapse-horizontal="true">Collapse <span class="caret"></span></button>
 <div id="collapseEx2" class="collapse width">
     <div style="width: 20em">
@@ -671,7 +673,7 @@ If you’d like it to default open, add the additional class <code class="highli
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -680,7 +682,7 @@ If you’d like it to default open, add the additional class <code class="highli
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -696,7 +698,7 @@ If you’d like it to default open, add the additional class <code class="highli
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -706,7 +708,7 @@ If you’d like it to default open, add the additional class <code class="highli
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
