Cards: Fix nested cards for groups, decks, and columns

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3824,7 +3824,7 @@ Anchor variants:<br />
   </div>
   <div class="card card-inverse card-primary text-center">
     <div class="card-body">
-      <blockquote class="blockquote">
+      <blockquote class="blockquote text-light">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
         <footer>
           <small>
@@ -3861,6 +3861,16 @@ Anchor variants:<br />
       <h4 class="card-title">Card title</h4>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card card-body">
+    <div class="card">
+      <div class="card-header">Header</div>
+      <div class="card-body">Nested Card</div>
+      <div class="card-footer">Footer</div>
+    </div>
+    <div class="card">
+      <div class="card-body">Nested Card</div>
     </div>
   </div>
 </div>
