Unit Test-Util: Add selector checks

--- a/test/js/index.html
+++ b/test/js/index.html
@@ -148,6 +148,7 @@
 <script src="unit/tab.js"></script>
 <script src="unit/tab-responsive.js"></script>
 <script src="unit/tooltip.js"></script>
+<script src="unit/util.js"></script>
 
 </head>
 <body>
