Tooltip: Rework keyboard navigation handling

--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -57,6 +57,7 @@
 
 
 <button class="btn btn-default" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
+<button class="btn btn-default" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 
 <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">New</button>
 
