update qunit, jquery, dependencies, and gems

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -9,7 +9,7 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 <link rel="stylesheet" href="../../docs/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
+<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/dropdown.js"></script>
