--- a/test/visual/flexbox-form-inline.html
+++ b/test/visual/flexbox-form-inline.html
@@ -8,7 +8,7 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
+<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
 
 </head>
