--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -9,11 +9,11 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <!--
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
+<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
 -->
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
+<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/collapse.js"></script>
